--- a/packages/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/packages/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -2,6 +2,8 @@
 /// @group colors
 ////
 
+@import 'settings-colours-nice';
+
 /// True black, used for print styles
 /// @since 0.2.0
 $colour-true-black: #000;
