--- a/packages/nds-core/scss/settings/_settings.scss
+++ b/packages/nds-core/scss/settings/_settings.scss
@@ -1,5 +1,10 @@
-@import 'settings-modular-scale',
-  'settings-colours-nice',
+@import 'settings-colours-nice',
   'settings-colours-semantic',
+  'settings-modular-scale',
   'settings-spacing',
-  'settings-variables';
+  'settings-breakpoints',
+  'settings-glyphs',
+  'settings-layout',
+  'settings-print',
+  'settings-typography',
+  'settings-mq';
