--- a/packages/nds-core/scss/typography/_typography.scss
+++ b/packages/nds-core/scss/typography/_typography.scss
@@ -1,11 +1,3 @@
-////
-/// @group Typography
-////
-
-@import 'typography-settings',
-  'typography-helpers',
-  'typography-global',
+@import 'typography-helpers',
   'typography-links',
-  'typography-headings',
-  'typography-lists',
-  'typography-quotations';
+  'typography-headings';
