--- a/packages/design-system/scss/layout/_layout-container.scss
+++ b/packages/design-system/scss/layout/_layout-container.scss
@@ -2,15 +2,6 @@
 /// @group components
 ////
 
-/// Container placeholder.
-/// @since 0.1.0
-%container {
-  margin: auto;
-  max-width: rem($nice-container-max-width);
-  width: 96%; // Fallback for non-calc browsers e.g. IE8, see https://caniuse.com/#feat=calc
-  width: calc(100% - #{rem($spacing-large)}); // sass-lint:disable-line no-duplicate-properties
-}
-
 /// Container, used as a wrapper around sections within a page.
 /// Usually used to house grids.
 ///
@@ -21,7 +12,7 @@
 ///   </div>
 /// @since 0.1.0
 .container {
-  @extend %container;
+  @include container;
 
   &--full {
     max-width: 100%;
