--- a/packages/design-system/scss/typography/_typography-global.scss
+++ b/packages/design-system/scss/typography/_typography-global.scss
@@ -2,58 +2,24 @@
 /// @group Typography
 ////
 
-@include default-box-sixing;
-
-/// The default focus style used for elements like anchors and buttons. rounded version used for elements that have a border radius
-/// @param {Boolean} $rounded whether to use box shadow for border (outline can't be styled to have radius corners)
-/// @output the default focus styles ie background colour and outline
-/// @since 0.1.0
-@mixin default-focus-style($rounded: false) {
-  @if $rounded {
-    box-shadow: 0 0 0 rem($spacing-x-small) $colour-focus;
-    outline: $spacing-x-small solid transparent;
-    outline-offset: $spacing-x-small;
-  }
-  @else {
-    outline: rem($spacing-x-small) solid $colour-focus;
-  }
-}
-
-/// The inverse focus style used for elements like anchors and buttons
-/// on an inverse (dark) background
-/// @output the inverse focus styles ie background colour and outline
-/// @since 0.3.1
-@mixin inverse-focus-style {
-  outline: rem($spacing-x-small) solid $colour-focus-inverse;
-}
-
-/// The highlight style used for elements like inputs and textareas
-/// if there's an error on the field
-/// @param {Boolean} $rounded whether to use box shadow for border (outline can't be styled to have radius corners)
-/// @output default styling for form elements in an errored state
-/// @since 1.0
-@mixin default-error-style($rounded: false) {
-  @if $rounded {
-    box-shadow: 0 0 0 rem($spacing-x-small) $colour-error;
-    outline: $spacing-x-small solid transparent;
-    outline-offset: $spacing-x-small;
-  } 
-  @else {
-    outline: rem($spacing-x-small) solid $colour-error;
-  }
-}
-
 .nice-tophat {
   // Remove the pesky margin below tophat
-  margin-bottom: 0 !important; // sass-lint:disable-line no-important
+  margin-bottom: 0 !important;
 }
 
 html {
+  box-sizing: border-box;
   font-size: rem($nice-root-font-size-min);
   overflow-x: hidden;
 
+  // See https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+  }
+
   @include mq($from: $nice-root-font-size-min-breakpoint) {
-    // sass-lint:disable-block no-duplicate-properties
 
     // Fallback halfway between max and min for older browsers that don't support calc
     font-size: rem($nice-root-font-size-min + ($nice-root-font-size-max - $nice-root-font-size-min) / 2);
