--- a/packages/nds-button/scss/button.scss
+++ b/packages/nds-button/scss/button.scss
@@ -1,13 +1,12 @@
-@import '~@nice-digital/nds-core/scss/core';
-
 ////
 /// @group components
 ////
 
+@import '~@nice-digital/nds-core/scss/core';
+
 /// Button
 /// @since 0.1.0
 .btn {
-  @include remove-mz-focus-inner;
   @include font-size(0);
   appearance: none;
   background: $colour-btn-primary;
@@ -20,7 +19,7 @@
   padding: em($spacing-small $spacing-medium);
   position: relative;
   text-align: left;
-  text-decoration: none !important; // sass-lint:disable-line no-important
+  text-decoration: none !important;
   vertical-align: top;
   white-space: nowrap;
 
@@ -121,7 +120,7 @@
 .btn--inverse {
   background: $colour-btn-inverse;
   border: em(1px) solid $colour-btn-inverse-text;
-  color: $colour-btn-inverse-text !important; // sass-lint:disable-line no-important
+  color: $colour-btn-inverse-text !important;
 
   &:visited {
     color: $colour-btn-inverse-text;
