--- a/packages/nds-core/scss/core.scss
+++ b/packages/nds-core/scss/core.scss
@@ -1,24 +1,7 @@
-@charset 'utf-8';
+@import 'settings/settings',
+  'vendor/vendor',
+  'helpers/helpers',
+  'layout/layout',
+  'typography/typography';
 
-// Reset
-@import 'vendor/normalize';
-
-// Vendor
-@import 'vendor/math',
-  'vendor/is',
-  'vendor/mq';
-
-// Settings
-@import 'settings/settings';
-
-// Helpers
-@import 'helpers/helpers';
-
-// Grid system
-@import 'grid/grid';
-
-// Typography
-@import 'typography/typography';
-
-// Icons - from nice-icons module
-@import '~@nice-digital/icons/dist/nice-icons';
+@import '~sass-mq/mq';
