--- a/packages/nds-core/scss/helpers/_helpers.scss
+++ b/packages/nds-core/scss/helpers/_helpers.scss
@@ -1,14 +1,8 @@
-////
-/// @group helpers
-////
-
 @import 'helpers-utils',
-  'hacks/hacks',
-  'helpers-lists',
-  'helpers-glyphs',
   'helpers-bem',
-  'helpers-print',
-  'helpers-visibility',
-  'helpers-spacing',
   'helpers-clearfix',
-  'helpers-text';
+  'helpers-focus',
+  'helpers-glyphs',
+  'helpers-lists',
+  'helpers-text',
+  'helpers-visibility';
