--- a/packages/nds-core/scss/layout/_layout-grid-generator.scss
+++ b/packages/nds-core/scss/layout/_layout-grid-generator.scss
@@ -49,3 +49,28 @@ $human-number-names: (
     }
   }
 }
+
+@mixin generate-grid-classes($breakpoint: null) {
+  $prefix: if($breakpoint, $breakpoint + ":", "");
+
+  // Width classes
+  @for $index from 1 through 12 {
+    [data-g~="#{ $prefix }#{ $index }"] {
+      width: percentage($index / 12);
+    }
+  }
+
+  // Push/ pull classes
+  @for $index from 0 through 12 {
+    [data-g~="#{ $prefix }push:#{ $index }"] {
+      left: percentage($index / 12);
+    }
+
+    [data-g~="#{ $prefix }pull:#{ $index }"] {
+      right: percentage($index / 12);
+    }
+  }
+
+  // Human class names like  one-whole
+  @include human-grid-names($prefix);
+}
