Darken error colour to meet WCAG colour contrast

--- a/packages/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/packages/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -200,7 +200,7 @@ $colour-live: #70a747;
 
 /// Error text and border colour
 /// @since 0.2.0
-$colour-error: #b10e1e;
+$colour-error: #ae0e1e;
 
 /// Error background colour
 /// @since 0.2.0
