--- a/packages/nds-core/scss/typography/_typography-links.scss
+++ b/packages/nds-core/scss/typography/_typography-links.scss
@@ -8,7 +8,7 @@
   -webkit-tap-highlight-color: rgba($colour-focus, .333);
   color: $colour-link;
   text-decoration: underline;
-  text-decoration-skip: ink;
+  text-decoration-skip: auto;
 
   &:visited {
     color: $colour-link-visited;
@@ -42,7 +42,7 @@
   -webkit-tap-highlight-color: rgba($colour-focus, .333);
   color: $colour-link-inverse;
   text-decoration: underline;
-  text-decoration-skip: ink;
+  text-decoration-skip: auto;
 
   &:visited {
     color: $colour-link-inverse-visited;
