NDS-69 Fixed issues with fieldset and legend style

--- a/src/components/filter-group/_filter-group.scss
+++ b/src/components/filter-group/_filter-group.scss
@@ -10,6 +10,11 @@
 .filter-group {
   margin-top: rem($spacing-medium);
   padding: 0;
+  border: 0;
+
+  legend {
+    @include invisible();
+  }
 
   &:first-child {
     margin-top: 0;
