--- a/src/components/filter-group/_filter-group.scss
+++ b/src/components/filter-group/_filter-group.scss
@@ -9,11 +9,15 @@
 /// @since 0.5.0
 .filter-group {
   margin-top: rem($spacing-medium);
-  padding: 0;
-  border: 0;
 
   legend {
     @include invisible();
+  }
+
+  fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
   }
 
   &:first-child {
