NDS-71 Darken alert text

--- a/src/stylesheets/settings/_settings-colours-semantic.scss
+++ b/src/stylesheets/settings/_settings-colours-semantic.scss
@@ -212,7 +212,7 @@ $colour-error-background: #eac3c3;
 
 /// Caution text and border colour
 /// @since 0.2.0
-$colour-caution: #9b722f;
+$colour-caution: #835f24;
 
 /// Caution background colour
 /// @since 0.2.0
