--- a/packages/design-system/scss/typography/_typography-global.scss
+++ b/packages/design-system/scss/typography/_typography-global.scss
@@ -20,14 +20,26 @@ html {
   }
 
   @include mq($from: $nice-root-font-size-min-breakpoint) {
-
     // Fallback halfway between max and min for older browsers that don't support calc
-    font-size: rem($nice-root-font-size-min + ($nice-root-font-size-max - $nice-root-font-size-min) / 2);
+    font-size: rem(
+      $nice-root-font-size-min +
+        ($nice-root-font-size-max - $nice-root-font-size-min) / 2
+    );
     // Follows "fluid typography" rules: https://www.google.co.uk/search?q=fluid%20typography%20vw
     // ie scales font-size linearly between 2 breakpoints.
     // Also uses rems so that they're relative to browser font size.
     // In form: MIN_FONT_SIZE + (MAX_FONT_SIZE - MIN_FONT_SIZE) * (100vw - MIN_SCREEN_SIZE) / (MAX_SCREEN_SIZE - MIN_SCREEN_SIZE)
-    font-size: calc(#{rem($nice-root-font-size-min)} + #{strip-unit(rem($nice-root-font-size-max) - rem($nice-root-font-size-min))} * ((100vw - #{rem($nice-root-font-size-min-breakpoint)}) / #{strip-unit(rem($nice-root-font-size-max-breakpoint) - rem($nice-root-font-size-min-breakpoint))}));
+    font-size: calc(
+      #{rem($nice-root-font-size-min)} + #{strip-unit(
+          rem($nice-root-font-size-max) - rem($nice-root-font-size-min)
+        )} *
+        (
+          (100vw - #{rem($nice-root-font-size-min-breakpoint)}) / #{strip-unit(
+              rem($nice-root-font-size-max-breakpoint) -
+                rem($nice-root-font-size-min-breakpoint)
+            )}
+        )
+    );
   }
 
   @include mq($from: $nice-root-font-size-max-breakpoint) {
@@ -67,7 +79,7 @@ p,
 }
 
 code {
-  background: $colour-panel-default;
+  background: $colour-nice-grey-3;
   border: 1px solid $colour-border;
   border-radius: em($spacing-xx-small);
   color: $colour-text;
