--- a/packages/nds-button/scss/button.scss
+++ b/packages/nds-button/scss/button.scss
@@ -15,7 +15,9 @@
   color: $colour-btn-primary-text;
   cursor: pointer;
   display: inline-block;
-  margin: em(0 $spacing-small $spacing-small -4px); // Negative left margin to combat inline-block gaps
+  margin: em(
+    0 $spacing-small $spacing-small -4px
+  ); // Negative left margin to combat inline-block gaps
   padding: em($spacing-small $spacing-medium);
   position: relative;
   text-align: left;
@@ -56,7 +58,7 @@
   &[aria-disabled='true'],
   &[disabled='disabled'],
   &[disabled] {
-    opacity: .5;
+    opacity: 0.5;
     pointer-events: none;
 
     &:hover {
