--- a/packages/dev-app/src/App.scss
+++ b/packages/dev-app/src/App.scss
@@ -1,10 +1,10 @@
-@import "~@nice-digital/design-system/scss/nice-design-system";
+@import '~@nice-digital/design-system/scss/nice-design-system';
 
-@import "~@nice-digital/nds-forms/scss/forms";
+@import '~@nice-digital/nds-forms/scss/forms';
 
 main {
   background: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   margin: 3vw;
   padding: 3vw;
   position: relative;
