Rename formgroup to form-group component

--- a/packages/nds-form-group/scss/form-group.scss
+++ b/packages/nds-form-group/scss/form-group.scss
@@ -1,6 +1,6 @@
 @import '~@nice-digital/nds-core/scss/core';
 
-.formgroup {
+.form-group {
   border: rem(1px) solid $colour-border;
   margin-bottom: rem($spacing-medium);
   padding: rem($spacing-small);
