--- a/packages/design-system/scss/helpers/_helpers-glyphs.scss
+++ b/packages/design-system/scss/helpers/_helpers-glyphs.scss
@@ -10,7 +10,7 @@
     @each $key, $value in $nice-glyphs {
       &--#{$key} {
         &:before {
-          content: unquote('\'\\#{$value}\'');
+          content: unquote("'\\#{$value}'");
         }
       }
     }
