--- a/packages/design-system/scss/typography/_typography-quotations.scss
+++ b/packages/design-system/scss/typography/_typography-quotations.scss
@@ -20,7 +20,7 @@
     font-size: 5rem;
     font-weight: bold;
     left: 0;
-    line-height: .8;
+    line-height: 0.8;
     position: absolute;
     text-align: center;
     top: 0;
