--- a/packages/design-system/scss/typography/_typography.scss
+++ b/packages/design-system/scss/typography/_typography.scss
@@ -1,5 +1,2 @@
-@import 'typography-global',
-  'typography-headings',
-  'typography-links',
-  'typography-lists',
-  'typography-quotations';
+@import 'typography-global', 'typography-headings', 'typography-links',
+  'typography-lists', 'typography-quotations';
