--- a/packages/nds-core/scss/core.scss
+++ b/packages/nds-core/scss/core.scss
@@ -1,7 +1,4 @@
-@import 'settings/settings',
-  'vendor/vendor',
-  'helpers/helpers',
-  'layout/layout',
+@import 'settings/settings', 'vendor/vendor', 'helpers/helpers', 'layout/layout',
   'typography/typography';
 
 @import '~sass-mq/mq';
