--- a/packages/nds-core/scss/settings/_settings.scss
+++ b/packages/nds-core/scss/settings/_settings.scss
@@ -1,10 +1,4 @@
-@import 'settings-colours-nice',
-  'settings-colours-semantic',
-  'settings-modular-scale',
-  'settings-spacing',
-  'settings-breakpoints',
-  'settings-glyphs',
-  'settings-layout',
-  'settings-print',
-  'settings-typography',
+@import 'settings-colours-nice', 'settings-colours-semantic',
+  'settings-modular-scale', 'settings-spacing', 'settings-breakpoints',
+  'settings-glyphs', 'settings-layout', 'settings-print', 'settings-typography',
   'settings-mq';
