--- a/packages/design-system/scss/helpers/_helpers.scss
+++ b/packages/design-system/scss/helpers/_helpers.scss
@@ -1,6 +1,2 @@
-@import 'helpers-glyphs',
-  'helpers-print',
-  'helpers-visibility',
-  'helpers-spacing',
-  'helpers-clearfix',
-  'helpers-text';
+@import 'helpers-glyphs', 'helpers-print', 'helpers-visibility',
+  'helpers-spacing', 'helpers-clearfix', 'helpers-text';
