--- a/packages/nds-checkbox/scss/checkbox.scss
+++ b/packages/nds-checkbox/scss/checkbox.scss
@@ -1,51 +1,70 @@
 @import '~@nice-digital/nds-core/scss/core';
 
-$checkbox-size: rem($spacing-large);
+// stylelint-disable no-descending-specificity
+
+$nds-checkbox-size: rem($spacing-large);
 
 .checkbox {
   @include font-size(p);
   display: block;
-  position: relative;
-  min-height: $checkbox-size;
   margin-bottom: rem($spacing-medium);
-  padding-left: $checkbox-size + rem($spacing-medium);
-
-  &--error .checkbox__label,
-  &--error .checkbox__label {
-    color: $colour-error;
-
-    &:before {
-      @include default-error-style;
-    }
-
-    &:after {
-      color: $colour-nice-black;
-    }
-  }
-
-  &--inline {
-    display: inline-block;
-    margin-right: rem($spacing-medium);
-    vertical-align: top;
-    input {
-      margin-right: rem($spacing-x-small);
-    }
-  }
+  min-height: $nds-checkbox-size;
+  padding-left: $nds-checkbox-size + rem($spacing-medium);
+  position: relative;
 
   &:last-child,
   &:last-of-type {
     margin-bottom: 0;
   }
 
-  &__input {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: $checkbox-size;
-    height: $checkbox-size;
+  &__label {
     cursor: pointer;
+    display: block;
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 1.5rem;
+    margin-bottom: rem($spacing-x-small);
+    padding: rem($spacing-x-small) 0;
+
+    &:before {
+      background: transparent;
+      border: rem($spacing-xx-small) solid $colour-nice-black;
+      box-sizing: border-box;
+      // outside square // stylelint-disable-line
+      content: '';
+      height: $nds-checkbox-size;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: $nds-checkbox-size;
+    }
+
+    &:after {
+      background: transparent;
+      border: solid;
+      border-top-color: transparent; // IE11 bug
+      border-width: 0 0 rem($spacing-x-small) rem($spacing-x-small);
+      // inside check / tick // stylelint-disable-line
+      content: '';
+      height: $nds-checkbox-size / 3; // this is the short end of the checkmark;
+      left: rem($spacing-small);
+      opacity: 0;
+      position: absolute;
+      top: rem($spacing-small);
+      transform: rotate(-45deg);
+      width: rem($spacing-medium);
+    }
+  }
+
+  &__input {
+    cursor: pointer;
+    height: $nds-checkbox-size;
+    left: 0;
     opacity: 0;
+    position: absolute;
+    top: 0;
+    width: $nds-checkbox-size;
+    z-index: 1;
 
     &:focus + .checkbox__label:before {
       @include default-focus-style;
@@ -65,54 +84,35 @@ $checkbox-size: rem($spacing-large);
     }
   }
 
-  &__label {
-    // stylelint-disable-line
-    font-size: 1rem;
-    line-height: 1.5rem;
-    font-weight: bold;
-    display: block;
-    margin-bottom: rem($spacing-x-small);
-    cursor: pointer;
-    padding: rem($spacing-x-small) 0;
-
-    &:before {
-      // outside square // stylelint-disable-line
-      content: '';
-      box-sizing: border-box;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: $checkbox-size;
-      height: $checkbox-size;
-      border: rem($spacing-xx-small) solid $colour-nice-black;
-      background: transparent;
-    }
-
-    &:after {
-      // inside check / tick // stylelint-disable-line
-      content: '';
-      position: absolute;
-      top: rem($spacing-small);
-      left: rem($spacing-small);
-      width: rem($spacing-medium);
-      height: $checkbox-size / 3; // this is the short end of the checkmark;
-      transform: rotate(-45deg);
-      border: solid;
-      border-width: 0 0 rem($spacing-x-small) rem($spacing-x-small);
-      border-top-color: transparent; // IE11 bug
-      opacity: 0;
-      background: transparent;
-    }
-  }
-
   &__hint {
     color: $colour-nice-dark-grey;
-    margin-top: rem($spacing-x-small);
     margin-bottom: rem($spacing-small);
+    margin-top: rem($spacing-x-small);
   }
 
   &__error-message {
     color: $colour-error;
     font-weight: bold;
+  }
+
+  &--error .checkbox__label {
+    color: $colour-error;
+
+    &:before {
+      @include default-error-style;
+    }
+
+    &:after {
+      color: $colour-nice-black;
+    }
+  }
+
+  &--inline {
+    display: inline-block;
+    margin-right: rem($spacing-medium);
+    vertical-align: top;
+    input {
+      margin-right: rem($spacing-x-small);
+    }
   }
 }
