--- a/packages/nds-core/__stories__/grid.stories.scss
+++ b/packages/nds-core/__stories__/grid.stories.scss
@@ -2,8 +2,8 @@
 
 .grid-example-item {
   background: $colour-nice-grey-3;
-  border: .25em solid $colour-nice-grey-1;
-  margin-bottom: .5em;
-  padding: .5em;
+  border: 0.25em solid $colour-nice-grey-1;
+  margin-bottom: 0.5em;
+  padding: 0.5em;
   text-align: center;
 }
