--- a/packages/nds-core/scss/typography/_typography.scss
+++ b/packages/nds-core/scss/typography/_typography.scss
@@ -1,3 +1,1 @@
-@import 'typography-helpers',
-  'typography-links',
-  'typography-headings';
+@import 'typography-helpers', 'typography-links', 'typography-headings';
